# leptodon

./: .dockerignore  .gitignore  .licensure.yml  .pre-commit-config.yaml  Cargo.toml  JenkinsfileGH-dev  JenkinsfileGH-new  JenkinsfileSCM  JenkinsfileSCM.bak  Makefile.toml  README.md  agent.pod.yaml  build.rs  demo.Dockerfile  docker-compose.overview.yaml  fetch-token.sh  flake.nix  index.html  overview.dev.Dockerfile
.cargo/: config.toml
.config/: nextest.toml
attr-docgen/: Cargo.toml  build.rs
attr-docgen/src/: codeblock.rs  lib.rs  parameter_docs.rs  util.rs
demo/: .tailwind  Cargo.toml  README.md  Trunk.toml  build.rs  input.css  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.js
demo/codegen/: Cargo.toml  README.md
demo/codegen/src/: main.rs
demo/src/: app.rs  generated_demolist.rs  lib.rs  main.rs
demo/src/demos/: accordion.rs  alert.rs  avatar.rs  badge.rs  button.rs  calendar.rs  checkbox.rs  codeblock.rs  date_picker.rs  dialog.rs  divider.rs  dropdown.rs  form_input.rs  heading.rs  input.rs  link.rs  mod.rs  modal.rs  navbar.rs  popover.rs  radio.rs  select.rs  spinner.rs  table.rs  tabs.rs  tag_picker.rs  textarea.rs  themeselector.rs  toast.rs  toggle.rs
demo/style/: output.css
flake-modules/: default.nix
flake-modules/crates/: default.nix  flake.nix  result
leptodon/: Cargo.toml  build.rs
leptodon/src/: lib.rs
leptodon/src/accordion/: mod.rs
leptodon/src/alert/: mod.rs
leptodon/src/avatar/: mod.rs
leptodon/src/badge/: mod.rs
leptodon/src/button/: mod.rs  variations.rs
leptodon/src/button_group/: mod.rs  variations.rs
leptodon/src/calendar/: mod.rs  year.rs
leptodon/src/checkbox/: mod.rs
leptodon/src/class_list/: reactive_class.rs
leptodon/src/codeblock/: mod.rs
leptodon/src/darkmode/: mod.rs
leptodon/src/date_picker/: mod.rs  range_picker.rs
leptodon/src/dialog/: mod.rs
leptodon/src/form_input/: mod.rs
leptodon/src/heading/: mod.rs
leptodon/src/icon/: icon_data.rs  mod.rs
leptodon/src/input/: mod.rs  number.rs
leptodon/src/input_group/: mod.rs  presets.rs
leptodon/src/layout/: mod.rs
leptodon/src/link/: mod.rs
leptodon/src/modal/: mod.rs
leptodon/src/paragraph/: mod.rs
leptodon/src/popover/: mod.rs
leptodon/src/radio/: mod.rs
leptodon/src/select/: mod.rs
leptodon/src/spinner/: mod.rs
leptodon/src/table/: grouping.rs  mod.rs
leptodon/src/tabs/: mod.rs
leptodon/src/tag_picker/: mod.rs
leptodon/src/textarea/: mod.rs
leptodon/src/toast/: mod.rs
leptodon/src/toggle/: mod.rs
leptodon/src/util/: callback.rs  element.rs  mod.rs  on_pointer_down.rs  option_comp.rs  optional_prop.rs  shared_id.rs  styling.rs  time.rs
leptodon/src/util/signals/: mod.rs
nix/: flake.nix
overview/: .tailwind  Cargo.toml  README.md  Readme.md  Trunk.toml  build.rs  docker-compose.dev.yaml  index.html  input.css  output.css  package-lock.json  rust-toolchain.toml  tailwind.config.js
overview/codegen/: Cargo.toml  README.md
overview/codegen/src/: main.rs
overview/end2end/: ci-test-launch.sh  devenv.nix  devenv.yaml  flake.nix  package-lock.json  package.json  playwright.config.ts
overview/end2end/tests/: accessibility.spec.ts  accordion.spec.ts  alert.spec.ts  button.spec.ts  calendar.spec.ts  checkbox.spec.ts  date_rangepicker.spec.ts  dropdown.spec.ts  example.spec.ts  inputs.spec.ts  modal.spec.ts  popover.spec.ts  radio.spec.ts  select.spec.ts  table.spec.ts  tabs.spec.ts  tag_picker.spec.ts  theme_selector.spec.ts  toast.spec.ts  toggle.spec.ts  upload.spec.ts
overview/end2end/tests/test_files/: s1.txt
overview/src/: app.rs  demo_table.rs  errors.rs  fallback.rs  forms.rs  gen_icons.rs  group_table.rs  ical_property.rs  lib.rs  main.rs  web_calendar.rs
overview/src/testcases/: alert.rs  calendar.rs  checkbox.rs  copy_button.rs  date_range_picker.rs  inputs.rs  mod.rs  popover.rs  radio.rs  select.rs  tabs.rs  tag_picker.rs  toast.rs  toggle.rs  upload.rs  year_calendar.rs
overview/style/: output.css
proc-macros/: Cargo.toml  README.md
proc-macros/src/: codeblock.rs  parameter_docs.rs  util.rs
src/: button.rs  include_generated.rs  lib.rs  main.rs  test.rs
src/accordion/: mod.rs
src/avatar/: mod.rs
src/badge/: mod.rs
src/button/: mod.rs  variations.rs
src/button_group/: mod.rs  variations.rs
src/calendar/: mod.rs  year.rs
src/checkbox/: mod.rs
src/class_list/: mod.rs  reactive_class.rs
src/codeblock/: mod.rs
src/components/: button.rs
src/darkmode/: mod.rs
src/date_picker/: mod.rs  range_picker.rs
src/dialog/: mod.rs
src/divider/: mod.rs
src/dropdown/: mod.rs
src/form_input/: mod.rs
src/heading/: mod.rs
src/icon/: icon_data.rs  mod.rs
src/input/: mod.rs  number.rs  upload.rs
src/input_group/: mod.rs  presets.rs
src/layout/: mod.rs
src/link/: mod.rs
src/modal/: mod.rs
src/navbar/: mod.rs
src/popover/: mod.rs
src/radio/: mod.rs
src/select/: mod.rs
src/spinner/: mod.rs
src/table/: grouping.rs  mod.rs
src/tag_picker/: mod.rs
src/textarea/: mod.rs
src/toast/: mod.rs
src/toggle/: mod.rs
src/util/: callback.rs  class_list.rs  element.rs  fuzzy.rs  lorem.rs  mod.rs  option_comp.rs  optional_prop.rs  shared_id.rs
src/util/signals/: component_ref.rs  mod.rs  signal_watch.rs
src/util/signals/model/: mod.rs  model.rs  option_model.rs  vec_model.rs
