[package]
name = "leptodon"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
leptos = { version = "0.8.14", optional = true }
leptos_meta = { version = "0.8.5", optional = true }
leptos_router = { version = "0.8.5", optional = true }
leptos_axum = { version = "0.8.5", optional = true }
leptos-use = { version = "0.18", features = ["use_calendar", "on_click_outside", "math"], optional = true }
attr-docgen = { path="./attr-docgen"}

reactive_stores = { version = "0.2.5", optional = true }
uuid = { version = "1.18.1",  features = ["v4", "js"], optional = true }
wasm-bindgen = { version = "=0.2.105", optional = true }
wasm-cookies = { version = "=0.2.1", optional = true }

axum = { version = "0.8", optional = true }
axum-extra = { version = "0.9", optional = true, features = ["cookie"] }
web-sys = { version = "0.3.82", features = ["HtmlDocument", "Window", "MediaQueryList", "HtmlElement", "HtmlInputElement", "KeyboardEvent"], optional = true }
cfg-if = "1.0.4"
rstml-to-string-macro = { version = "0.1.0", optional = true }
serde = { version = "1.0", features=["derive"], optional = true }
num-traits = "0.2.19"
http1 = { version = "1", package = "http", optional = true }
const-str = "0.7.0"
chrono = "0.4.42"
base64 = "0.22.1"
send_wrapper = "0.6.0"
leptos-struct-table = { version = "0.18", features = ["chrono"] }
nucleo-matcher = "0.3.1"
zxcvbn = "3.1.0"

[dev-dependencies]
polars = { version = "0.52", features = ["lazy", "timezones"] }

[build-dependencies]
walkdir = "2.5.0"

[features]
default = ["leptos"]
leptos = ["dep:leptos", "dep:leptos_router","dep:leptos-use", "dep:leptos_meta", "dep:web-sys", "dep:serde", "dep:rstml-to-string-macro", "dep:reactive_stores", "dep:uuid", "dep:wasm-cookies"]
csr = ["leptos/csr"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:axum-extra",
    "dep:http1",
    "leptos-use/axum",
    "leptos-use/ssr"
]
hydrate = [
    "leptos/hydrate",
]

[lints.rust]
dead_code = "allow"
