[workspace.metadata.crane]
name = "Leptodon"
[workspace.package]
version = "1.1.0-dev"
edition = "2024"
license = "Apache-2.0"
homepage = "https://leptodon.dev"
repository = "https://github.com/openanalytics/leptodon"

[workspace]
resolver = "3"
members = ["leptodon", "proc-macros", "demo", "overview"]
# Since these are compiled with cargo from build.rs files, they need their own target folders to avoid deadlocking.
# The easiest solution is to exclude them from the workspace.
exclude = ["demo/codegen", "overview/codegen"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[profile.dev]
# codegen-backend = "cranelift"
opt-level = 1
incremental = true

[profile.dev.package.leptodon]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3
debug = 2

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[workspace.dependencies]
leptodon = { path = "./leptodon", version = "=1.1.0-dev" }
leptodon-proc-macros = { path = "./proc-macros", version = "=1.1.0-dev" }

# Protocol
http = "1"
# Server
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }

# Middleware
tower = { version = "0.5.3" }
tower-http = { version = "0.6.8", features = ["fs"] }
# Async
tokio = { version = "1", features = ["rt-multi-thread"] }

# Leptos core
leptos = { version = "0.8.17", features = ["rkyv", "tracing"] }
leptos_axum = { version = "0.8.8" }
leptos_meta = { version = "0.8.6" }
leptos_router = { version = "0.8.12" }
wasm-bindgen = { version = "=0.2.108" }
wasm-streams = { version = "=0.4.2" }
wasm-cookies = { version = "=0.2.1" }
web-sys = { version = "=0.3.85" }
reactive_stores = { version = "=0.4.2" }
send_wrapper = { version = "0.6.0" }
# Leptos additions
leptos-struct-table = { version = "0.18", features = ["chrono"] }
leptos-use = { version = "0.18" }

# Log and error
tracing = { version = "0.1" }
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
anyhow = { version = "1.0.102" }
thiserror = "2.0.18"

# Time and date
chrono = { version = "0.4.44", features = ["serde"] }
dateparser = { version = "0.2.1" } # TODO: Use new wasm feature to hopefully exclude regex and reduce wasm size.
ical = { git = "https://github.com/lennart-k/caldata-rs", rev = "474caf58acbc8ebefd90e6b848741d7ed5136d65" }
rrule = { version = "0.14", features = ["serde"] }

# String utils
regex = { version = "1.12" }
strum = "0.28.0"
strum_macros = "0.28.0"
const-str = { version = "1.1.0" }
base64 = { version = "0.22.1" }
rstml-to-string-macro = { version = "0.1.0" }
nucleo-matcher = { version = "0.3.1" } # Fuzzy search

# Other utils
itertools = "0.14.0"
zxcvbn = { version = "3.1.0" }
uuid = { version = "1.21.0" }

# Macros
cfg-if = "1.0.4"
derive_more = { version = "2.1.1", features = ["display"] }
serde = "1"
num-traits = { version = "0.2.19" }
# Build macros
syn = { version = "2.0.117" }
quote = { version = "1.0.45" }
proc-macro2 = { version = "1.0.106" }
walkdir = { version = "2.5.0" }