[package]
publish = false
name = "attr-docgen"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.44"
comrak = "0.50.0"
proc-macro2 = "1.0.106"
syn = "2.0.117"
syntect = "5.3.0"

[build-dependencies]
walkdir = "2.5.0"

# # fix: https://github.com/jhpratt/deranged/issues/17
# deranged = "=0.4.0"
