# cargo-features = ["codegen-backend"]

[package]
name = "demo"
edition = "2024"

[lib]
name = "demo"
crate-type = ["cdylib", "rlib"]

[dependencies]
http = "1"
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true, features = [ "fs", "compression-br", "compression-gzip" ] }
axum = { workspace = true, optional = true, features = [ "macros" ] }

tokio = { workspace = true, optional = true, features = [ "rt-multi-thread" ] }

console_log = { workspace = true }
console_error_panic_hook = { workspace = true }

leptos = { workspace = true, features = [ "rkyv", "tracing" ] }
leptos_axum = { workspace = true, optional = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }

wasm-bindgen = { workspace = true, optional = true }

itertools = { workspace = true }
leptodon = { workspace = true }
leptos-struct-table = { workspace = true, features = [ "chrono" ] }

axum-extra = { workspace = true, optional = true, features = [ "cookie" ] }

thiserror = { workspace = true }
tracing = { workspace = true, optional = true }
log = { workspace = true }
cfg-if = { workspace = true }
derive_more = { workspace = true, features = [ "display" ] }
chrono = { workspace = true, features = [ "serde" ] }
ical = { workspace = true, features = [ "serde-derive" ] }

regex = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
dateparser = { workspace = true, optional = true }
rrule = { workspace = true, features = [ "serde" ] }
leptodon-proc-macros = { workspace = true }

serde = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }

[build-dependencies]
syn = { workspace = true, features = [ "full" ] }
walkdir = "2.5.0"
heck = "0.5.0" # case conversion

[features]
default = ["ssr"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptodon/leptos",
    "leptodon/ssr",
    "dep:leptos_axum",
    "dep:tokio",
    "dep:axum",
    "dep:axum-extra",
    "dep:regex",
    "dep:anyhow",
    "dep:dateparser",
    "dep:tower",
    "dep:tower-http"
]
hydrate = [
    "leptos/hydrate",
    "dep:wasm-bindgen",
    "leptodon/leptos",
    "leptodon/hydrate"
]
csr = [
    "leptos/csr",
    "leptodon/leptos",
    "leptodon/csr"
]
tower = ["dep:tower"]
tower-http = ["dep:tower-http"]

[package.metadata.leptos]
# # https://github.com/leptos-rs/leptos/issues/3813#issuecomment-3563904837
# Disabling (thus enabling this option) the erasure of components causes large linker errors in this project.

# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "demo"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
# Optional, defaults to "/site" in the Cargo target directory. Env: LEPTOS_SITE_ROOT.
# site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/output.css"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "assets"
site-addr = "127.0.0.1:3030"
# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
end2end-cmd = "npx playwright test --ui"
end2end-dir = "end2end"
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
