[package]
name = "overview"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.12", features = ["csr", "ssr"] }
leptos_meta = { version = "0.8.5"}
leptos_router = { version = "0.8.9" }
itertools = "0.14.0"
leptos-components = { path = ".." }

[build-dependencies]
leptos-components = { path = ".." }
syn = "2.0.110"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
