[package]
publish = false
name = "leptodon-proc-macros"
description = "Procedural macros crate for Leptodon (your Leptos UI toolkit for data science)."
license-file = "../LICENSE"
repository = "https://github.com/openanalytics/leptodon"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.45"
comrak = "0.50.0"
proc-macro2 = "1.0.106"
syn = "2.0.117"
syntect = "5.3.0"

[build-dependencies]
walkdir = "2.5.0"
