[package]
name = "leptodon-proc-macros"
version = "1.1.0-dev"
license = "Apache-2.0"
description = "Procedural macros crate for Leptodon (your Leptos UI toolkit)."
repository = "https://github.com/openanalytics/leptodon"
edition = "2024"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true, features = ["full"] }

[build-dependencies]
walkdir = "2.5.0"
